<resources>
    <string name="app_name">Project_3 final</string>
    <string name="nhapmatkhau">Nhập mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="nhapemail">Nhập email</string>
    <string name="chuacotaikhoandangkyngay">Chưa có tài khoản? Đăng ký ngay!</string>
    <string name="tenDangNhapHoacMatKhauSai">Tên đăng nhập hoặc mật khẩu sai!</string>
    <string name="troVe">Trở về</string>
    <string name="back">Back</string>
    <string name="timKiem">Tìm kiếm</string>
    <string name="nutGioHang">Nút giỏ hàng</string>
    <string name="sanPham">Sản phẩm</string>
    <string name="giaSanPham">Giá sản phẩm</string>
    <string name="vnd">VND</string>
    <string name="tenSanPham">Tên sản phẩm</string>
    <string name="dangXuat">Đăng xuất</string>
    <string name="gia">Giá</string>
    <string name="soLuong">Số lượng</string>
    <string name="tongSoLuong0">Tổng số lượng: 0</string>
    <string name="tongTien0d">Tổng tiền: 0đ</string>
    <string name="_1">1</string>
    <string name="_100_000d">100.000đ</string>
    <string name="dangKy">Đăng ký</string>
    <string name="userName">Username</string>
    <string name="passWord">Password</string>
    <string name="nhapUsername">Nhập Username</string>
    <string name="nhapPassword">Nhập Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="newPassword">New Password</string>
    <string name="nhapLaiPassword">Nhập lại Password</string>
    <string name="x">x</string>
    <string name="thanhToan">Thanh toán</string>
    <string name="sanPham_001">Sản phẩm 001</string>
    <string name="_999999d">999999đ</string>
    <string name="chiTietSanPham">Chi tiết sản phẩm</string>
    <string name="nhapTaiKhoan">Nhập tài khoản</string>
    <string name="xacNhanMatKhau">Xác nhận mật khẩu</string>
    <string name="nhapLaiMatKhau">Nhập lại mật khẩu</string>
    <string name="taiKhoan">Tài khoản</string>
    <string name="matKhauMoi">Mật khẩu mới</string>
    <string name="nhapMatKhauMoi">Nhập mật khẩu mới</string>
    <string name="danhSachSanPham">Danh sách sản phẩm</string>
    <string name="daCoTaiKhoanDangNhapNgay">Đã có tài khoản? Đăng nhập ngay!</string>
    <string name="logo">Logo</string>
    <string name="matKhau">Mật khẩu</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="underline_xoa"><u>Xóa</u></string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="gioHang">Giỏ hàng</string>
    <string name="gioHangTrong">Giỏ hàng trống</string>
    <string name="gioHangTrong_exclamation_mark">Giỏ hàng trống!!!</string>
    <string name="uid">UID:</string>
    <string name="email">Email:</string>
    <string name="anhHoSo">Ảnh hồ sơ</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="profiole_icon">Profiole icon</string>
    <string name="logo_icon">Logo icon</string>
    <string name="logo_uid">Logo UID</string>
    <string name="logo_email">Logo email</string>
    <string name="logo_profile">Logo Profile</string>
    <string name="example_name">Example Name</string>
    <string name="_2345678910jqka">2345678910JQKA</string>
    <string name="email_normal">Email</string>
    <string name="suaTen">Sửa tên</string>
    <string name="chuaCoTen">CHƯA CÓ TÊN</string>
    <string name="dangNhapBangGoogle">Đăng nhập bằng Google</string>
    <string name="default_web_client_id">562811102361-umuce3vjlqcfev2q9aik7vqmmm3k26mq.apps.googleusercontent.com</string>
    <string name="hoacDangNhapBang">hoặc đăng nhập bằng:</string>
    <string name="soDienThoai">Số điện thoại</string>
    <string name="nhapSoDienThoai">Nhập số điện thoại</string>
    <string name="nhapTenNguoiNhan">Nhập tên người nhận</string>
    <string name="tenNguoiNhan">Tên người nhận</string>
    <string name="thongTinGiaoHang">THÔNG TIN GIAO HÀNG</string>
    <string name="diaChiGiaoHang">Địa chỉ giao hàng</string>
    <string name="giaoHang">Giao hàng</string>
    <string name="soTien0d">Số tiền: 0đ</string>
    <string name="thongTinChuyenKhoan">Thông tin chuyển khoản</string>
    <string name="nguoiThuHuongNguyenAnhTuan">Người thụ hưởng: Nguyễn Anh Tuấn</string>
    <string name="donHang">Đơn hàng</string>
    <string name="quanLySanPham">Quản lý sản phẩm</string>
    <string name="quanLyDonHang">Quản lý đơn hàng</string>
    <string name="quanLy">Quản lý</string>
</resources>