<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="#535159"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_arrow_back_24" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F00000"
            android:text="@string/dangXuat"
            android:textColor="@color/white"
            app:cornerRadius="7dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/titleCartName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/tenSanPham"
            android:textAlignment="center"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/titleCartPrice"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/gia"
            android:textAlignment="center"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/titleCartQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/soLuong"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTotalItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tongSoLuong0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tongTien0d"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>