<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:padding="8dp"
    android:background="@drawable/border_gray">

    <ImageView
        android:id="@+id/imgProduct"
        android:contentDescription="@string/sanPham"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCartName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:lines="2"
        android:text="@string/tenSanPham"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txtCartQty"
        app:layout_constraintStart_toEndOf="@+id/imgProduct"
        app:layout_constraintTop_toTopOf="@+id/imgProduct" />

    <TextView
        android:id="@+id/txtCartQty"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/txtCartPrice" />

    <TextView
        android:id="@+id/txtCartPrice"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/_100_000d"
        android:textSize="16sp"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/imgProduct"
        app:layout_constraintStart_toEndOf="@+id/imgProduct" />

    <TextView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|end"
        android:text="@string/underline_xoa"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btnMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="top|end"
        android:text="@string/minus"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txtCartQty"
        app:layout_constraintTop_toTopOf="@+id/txtCartQty" />

    <TextView
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:gravity="top|end"
        android:text="@string/plus"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCartQty" />

</androidx.constraintlayout.widget.ConstraintLayout>