<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgLogo"
            android:contentDescription="@string/logo_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo_72" />

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@null"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:drawableStart="@drawable/ic_search_24"
            android:hint="@string/timKiem"
            android:inputType="textFilter"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/btnViewCart"
            android:contentDescription="@string/nutGioHang"
            android:src="@drawable/ic_shopping_cart_30"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white" />

        <ImageButton
            android:contentDescription="@string/profiole_icon"
            android:id="@+id/imgProfile"
            android:layout_height="wrap_content"
            android:layout_width="40dp"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_profile_circle_30"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:contentDescription="@string/sanPham"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>