<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/titleDangKy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="5dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/white"
        android:gravity="center|center_vertical"
        android:text="@string/dangKy"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvLayout"
        app:layout_constraintStart_toStartOf="@+id/tvLayout"
        app:layout_constraintTop_toBottomOf="@+id/tvLayout" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:text="@string/taiKhoan"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDangKy" />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="12dp"
        android:background="@drawable/bg_input"
        android:gravity="start|center_vertical"
        android:hint="@string/nhapTaiKhoan"
        android:autofillHints="username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:text="@string/matKhauMoi"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUsername" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:padding="12dp"
        android:background="@drawable/bg_input"
        android:gravity="start|center_vertical"
        android:hint="@string/nhapMatKhauMoi"
        android:inputType="textPassword"
        android:textSize="10sp"
        android:textColor="@color/black"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="@+id/edUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        tools:ignore="SmallSp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/xacNhanMatKhau"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:cornerRadius="7dp"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <EditText
        android:id="@+id/edConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:padding="12dp"
        android:background="@drawable/bg_input"
        android:gravity="start|center_vertical"
        android:hint="@string/nhapLaiMatKhau"
        android:textSize="10sp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword"
        tools:ignore="SmallSp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#2196F3"
        android:padding="10dp"
        android:text="@string/dangKy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="@+id/titleDangKy"
        app:layout_constraintStart_toStartOf="@+id/titleDangKy"
        app:layout_constraintTop_toBottomOf="@+id/edConfirmPassword" />

    <TextView
        android:id="@+id/tvToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/daCoTaiKhoanDangNhapNgay"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>